; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_i210.c_e1000_init_nvm_params_i210.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_i210.c_e1000_init_nvm_params_i210.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { %struct.e1000_nvm_info }
%struct.e1000_nvm_info = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i8*, i8*, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [27 x i8] c"e1000_init_nvm_params_i210\00", align 1
@e1000_acquire_nvm_i210 = common dso_local global i32 0, align 4
@e1000_release_nvm_i210 = common dso_local global i32 0, align 4
@e1000_valid_led_default_i210 = common dso_local global i32 0, align 4
@e1000_nvm_flash_hw = common dso_local global i32 0, align 4
@e1000_read_nvm_srrd_i210 = common dso_local global i32 0, align 4
@e1000_write_nvm_srwr_i210 = common dso_local global i32 0, align 4
@e1000_validate_nvm_checksum_i210 = common dso_local global i8* null, align 8
@e1000_update_nvm_checksum_i210 = common dso_local global i8* null, align 8
@e1000_nvm_invm = common dso_local global i32 0, align 4
@e1000_read_invm_i210 = common dso_local global i32 0, align 4
@e1000_null_write_nvm = common dso_local global i32 0, align 4
@e1000_null_ops_generic = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.e1000_hw*)* @e1000_init_nvm_params_i210 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @e1000_init_nvm_params_i210(%struct.e1000_hw* %0) #0 {
  %2 = alloca %struct.e1000_hw*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.e1000_nvm_info*, align 8
  store %struct.e1000_hw* %0, %struct.e1000_hw** %2, align 8
  %5 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %6 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %5, i32 0, i32 0
  store %struct.e1000_nvm_info* %6, %struct.e1000_nvm_info** %4, align 8
  %7 = call i32 @DEBUGFUNC(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %9 = call i32 @e1000_init_nvm_params_82575(%struct.e1000_hw* %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @e1000_acquire_nvm_i210, align 4
  %11 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %12 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 6
  store i32 %10, i32* %13, align 8
  %14 = load i32, i32* @e1000_release_nvm_i210, align 4
  %15 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %16 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 5
  store i32 %14, i32* %17, align 4
  %18 = load i32, i32* @e1000_valid_led_default_i210, align 4
  %19 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %20 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 4
  store i32 %18, i32* %21, align 8
  %22 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %23 = call i64 @e1000_get_flash_presence_i210(%struct.e1000_hw* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %46

25:                                               ; preds = %1
  %26 = load i32, i32* @e1000_nvm_flash_hw, align 4
  %27 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %28 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %28, i32 0, i32 1
  store i32 %26, i32* %29, align 8
  %30 = load i32, i32* @e1000_read_nvm_srrd_i210, align 4
  %31 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %32 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 3
  store i32 %30, i32* %33, align 4
  %34 = load i32, i32* @e1000_write_nvm_srwr_i210, align 4
  %35 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %36 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 2
  store i32 %34, i32* %37, align 8
  %38 = load i8*, i8** @e1000_validate_nvm_checksum_i210, align 8
  %39 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %40 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 1
  store i8* %38, i8** %41, align 8
  %42 = load i8*, i8** @e1000_update_nvm_checksum_i210, align 8
  %43 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %44 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  store i8* %42, i8** %45, align 8
  br label %67

46:                                               ; preds = %1
  %47 = load i32, i32* @e1000_nvm_invm, align 4
  %48 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %49 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %49, i32 0, i32 1
  store i32 %47, i32* %50, align 8
  %51 = load i32, i32* @e1000_read_invm_i210, align 4
  %52 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %53 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 3
  store i32 %51, i32* %54, align 4
  %55 = load i32, i32* @e1000_null_write_nvm, align 4
  %56 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %57 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %57, i32 0, i32 2
  store i32 %55, i32* %58, align 8
  %59 = load i8*, i8** @e1000_null_ops_generic, align 8
  %60 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %61 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %60, i32 0, i32 0
  %62 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %61, i32 0, i32 1
  store i8* %59, i8** %62, align 8
  %63 = load i8*, i8** @e1000_null_ops_generic, align 8
  %64 = load %struct.e1000_nvm_info*, %struct.e1000_nvm_info** %4, align 8
  %65 = getelementptr inbounds %struct.e1000_nvm_info, %struct.e1000_nvm_info* %64, i32 0, i32 0
  %66 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %65, i32 0, i32 0
  store i8* %63, i8** %66, align 8
  br label %67

67:                                               ; preds = %46, %25
  %68 = load i32, i32* %3, align 4
  ret i32 %68
}

declare dso_local i32 @DEBUGFUNC(i8*) #1

declare dso_local i32 @e1000_init_nvm_params_82575(%struct.e1000_hw*) #1

declare dso_local i64 @e1000_get_flash_presence_i210(%struct.e1000_hw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
